@@ -6,11 +6,9 @@ import org.openqa.selenium.*;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 
-import java.io.IOException;
 import java.nio.file.*;
 import java.time.Duration;
 import java.util.UUID;
-import java.util.stream.Stream;
 
 public class Hooks {
     public static final ThreadLocal<WebDriver> DRIVER = new ThreadLocal<>();
@@ -22,20 +20,20 @@ public class Hooks {
     public void openBrowser() throws Exception {
         ChromeOptions opts = new ChromeOptions();
         opts.addArguments(
-                "--no-sandbox","--disable-dev-shm-usage",
+                "--headless=new","--no-sandbox","--disable-dev-shm-usage",
                 "--no-first-run","--no-default-browser-check",
                 "--disable-extensions","--disable-background-networking",
                 "--remote-debugging-port=0"
         );
 
-        // base can be injected from CI; otherwise create a temp profile per thread
-        String base = System.getProperty("chrome.userDataDir", "");
-        Path dir = base.isBlank()
-                ? Files.createTempDirectory("chrome-profile-" + UUID.randomUUID() + "-" + Thread.currentThread().getId())
-                : Paths.get(base, "t" + Thread.currentThread().getId() + "-" + UUID.randomUUID());
-        Files.createDirectories(dir);
-        PROFILE_DIR.set(dir);
-        opts.addArguments("--user-data-dir=" + dir.toAbsolutePath());
+        // ONLY add a user-data-dir if provided, else let Chrome create an ephemeral profile
+        String base = System.getProperty("chrome.userDataDir");
+        if (base != null && !base.trim().isEmpty()) {
+            Path dir = Paths.get(base, "t" + Thread.currentThread().getId() + "-" + UUID.randomUUID());
+            Files.createDirectories(dir);
+            PROFILE_DIR.set(dir);
+            opts.addArguments("--user-data-dir=" + dir.toAbsolutePath());
+        }
 
         WebDriver d = new ChromeDriver(opts);
         d.manage().timeouts().implicitlyWait(Duration.ofSeconds(2));
@@ -46,21 +44,23 @@ public class Hooks {
     @After
     public void quitBrowser(Scenario s) {
         try {
-            if (s.isFailed() && driver() instanceof TakesScreenshot ts) {
-                Allure.getLifecycle().addAttachment("failure","image/png","png", ts.getScreenshotAs(OutputType.BYTES));
+            WebDriver d = driver();
+            if (s.isFailed() && d instanceof TakesScreenshot) {
+                byte[] png = ((TakesScreenshot) d).getScreenshotAs(OutputType.BYTES);
+                Allure.getLifecycle().addAttachment("failure","image/png","png",png);
             }
         } catch (Exception ignored) {}
 
         try { if (driver()!=null) driver().quit(); } catch (Exception ignored) {}
         DRIVER.remove();
 
-        // best-effort cleanup of the profile dir
+        // clean temp profile if we created one
         Path dir = PROFILE_DIR.get();
         PROFILE_DIR.remove();
         if (dir != null) {
-            try (Stream<Path> walk = Files.walk(dir)) {
-                walk.sorted((a,b) -> b.compareTo(a)).forEach(p -> { try { Files.deleteIfExists(p); } catch (IOException ignored) {} });
-            } catch (IOException ignored) {}
+            try {
+                Files.walk(dir).sorted((a,b)->b.compareTo(a)).forEach(p -> { try { Files.deleteIfExists(p); } catch(Exception ignored){} });
+            } catch (Exception ignored) {}
         }
     }
 }
